# qualitywolves_homework

./: .envrc_local  .gitignore  .python-version  Makefile  README.md  pyproject.toml
src/cli/: process_tickers.py  send_email.py
src/schemas/: ticker.py
src/services/: fetcher.py  parser.py  sender.py
src/utils/: comparator.py  converter.py  default.py  time.py
