[tool.poetry]
name = "qw-homework"
version = "0.1.0"
description = ""
authors = ["kAldown <kaldownb@gmail.com>"]
readme = "README.md"
packages = [{include = "qw_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
aiomoex = "^2.1.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
